# rivals_sig_patcher

./: .clang-format  .clang-tidy  .gitignore  cross.txt  launcher.c  meson.build  setup.sh
.github/events/: tag-push.json
.github/workflows/: windows-build.yml
include/: config.h.in  game.h  msg.h  patcher.h
src/: game.c  main.c  msg.c  patcher.c
